--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-deepface
-opencv-python-headless
-pdf2image
-numpy
-Pillow
+streamlit==1.25.0
+deepface==0.0.75
+opencv-python-headless==4.7.0.72
+pdf2image==1.16.3
+numpy==1.24.3
+Pillow==9.5.0
