--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
+setuptools>=68.0.0
 streamlit==1.25.0
 deepface==0.0.75
 opencv-python-headless==4.7.0.72
 pdf2image==1.16.3
 numpy==1.24.3
 Pillow==9.5.0
-setuptools
 distutils
