--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ opencv-python-headless==4.7.0.72
 pdf2image==1.16.3
 numpy==1.24.3
 Pillow==9.5.0
-tensorflow==2.12.0
+tensorflow==2.7.0
+rich<14,>=10.14.0
