--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-setuptools>=68.0.0
 streamlit==1.25.0
 deepface==0.0.75
+tensorflow==2.7.0
 opencv-python-headless==4.7.0.72
 pdf2image==1.16.3
 numpy==1.24.3
-Pillow==9.5.0
-tensorflow==2.7.0
 rich<14,>=10.14.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+pygments==2.19.1
+setuptools>=68.0.0
