--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ streamlit==1.25.0
 deepface==0.0.75
 opencv-python-headless==4.7.0.72
 pdf2image==1.16.3
-numpy==1.24.3
+numpy>=1.26.0,<2.1.0
 rich<14,>=10.14.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
